# Biwoco-Assessment

./: README.md
Part1/: README.md  erd.puml  simple-erd.puml
Part2/: README.md  pyproject.toml  requirements.txt
Part2/app/api/: routes.py
Part2/app/core/: config.py  error.py  meta.py  order_list_query.py  product_list_query.py  product_service.py
Part2/app/models/: mongo_timestamp.py
Part2/app/repository/: order_repository.py  product_repository.py
Part2/tests/: api_products_test.py
Part3/: README.md
Part3/2-inputDataRestructure/: main.py
Part3/3-inputDataCheck/: illegal_product_validator.py  main.py  price_threshold_validator.py
Part4/: .env  README.md  pyproject.toml  requirements.txt
Part4/app/: main.py
Part4/app/api/: routes.py
Part4/app/api/endpoints/: health.py  orders.py  products.py  sample_products.py
Part4/app/core/: create_order_command.py  database.py  dependencies.py  mongodb_connection.py  order_service.py
Part4/app/models/: order.py  product.py  py_object_id.py
Part4/app/repository/: base_repository.py
Part4/tests/: api_orders_test.py
Part5/: README.md  main.py  products.csv  pyproject.toml  requirements.txt
